[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/components/nodes/node_parts/Callback.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/DecisionControl.gd" type="Script" id=2]

[node name="DecisionControl" type="VBoxContainer" groups=[
"decision_control",
]]
anchor_right = 0.180208
anchor_bottom = 0.0657407
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="."]
margin_right = 55.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Delete"

[node name="Connect" type="HBoxContainer" parent="."]
margin_top = 24.0
margin_right = 345.0
margin_bottom = 38.0
alignment = 1

[node name="TitleDecision" type="Label" parent="Connect"]
margin_left = 82.0
margin_right = 152.0
margin_bottom = 14.0
text = "DECISSION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecisionFrom" type="Label" parent="Connect"]
margin_left = 156.0
margin_right = 164.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTo" type="Label" parent="Connect"]
margin_left = 168.0
margin_right = 258.0
margin_bottom = 14.0
text = "CONNECTS TO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="To" type="Label" parent="Connect"]
margin_left = 262.0
margin_right = 262.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineControl" type="HBoxContainer" parent="."]
margin_top = 42.0
margin_right = 345.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LineControl"]
margin_top = 18.0
margin_right = 37.0
margin_bottom = 32.0
text = " LINE "

[node name="LineText" type="TextEdit" parent="LineControl"]
margin_left = 41.0
margin_right = 345.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Callback" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 345.0
margin_bottom = 263.0
rect_min_size = Vector2( 0, 150 )

[node name="Title" parent="Callback" index="0"]
margin_right = 345.0

[node name="HBoxContainer" parent="Callback" index="1"]
margin_right = 345.0

[node name="LineEdit" parent="Callback/HBoxContainer" index="0"]
margin_right = 231.0

[node name="AddButton" parent="Callback/HBoxContainer" index="1"]
margin_left = 235.0
margin_right = 276.0

[node name="RemoveButton" parent="Callback/HBoxContainer" index="2"]
margin_left = 280.0
margin_right = 345.0

[node name="CallbackList" parent="Callback" index="2"]
margin_right = 345.0
margin_bottom = 167.0

[node name="EmptyCallbackWarningDialog" parent="Callback" index="3"]
margin_top = 112.0
margin_right = 345.0
margin_bottom = 170.0

[node name="RepeatedCallbackWarningDialog" parent="Callback" index="4"]
margin_top = 112.0
margin_right = 345.0
margin_bottom = 170.0

[editable path="Callback"]
